# story-curator

./: .env.dev  .gitignore  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  PROJECT_OVERVIEW.md  README.md  activate.ps1  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  result.json  setup.py  setup_database.py  test_output.json  test_output.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  test.yml
docs/: Agent-Coding-Steps.md  MIGRATION_SUCCESS.md  POSTGRES_MIGRATION.md  architecture.md  coding-standards.md  contributing.md  environment-setup.md  project-overview.md  technical_decisions.md
docs/adr/: ADR-001-core-architecture.md  ADR-002-plugin-architecture.md  ADR-003-error-handling.md  ADR-004-cli-architecture.md  ADR-005-type-safety.md  ADR-006-testing-strategy.md  ADR-007-logging-architecture.md  ADR-008-subject-identification-strategy.md  ADR-009-database-design.md  ADR-010-podcast-analysis-architecture.md  README.md
docs/ai-agents/: README.md  development-workflow.md  tdd_workflow_guide.md
docs/ai-agents/prompts/: README.md  feature-implementation-prompt.md  tdd-implementation-prompt.md  tdd_implementation_prompt.md
docs/ai-agents/workflows/: development-workflow.md  tdd_workflow.md
docs/experiments/: Circle_Round_Evaluation_Report.md  Circle_Round_Evaluation_Report_Updated_20250904.md  Icon_Database_Improvement_Plan.md
docs/requirements/: README.md  TEMPLATE.md
docs/requirements/feature-specifications/: FR-001-audio-text-extraction.md  FR-002-audio-subject-identification.md  FR-003-simple-icon-generation.md  FR-004-audio-subject-identification.md  FR-004-yoto-icons-db.md  (+4 more)
docs/templates/: README.md
examples/: icon_curator_demo.py  icon_extractor_demo.py  story_audio_demo.py
migrations/: README.md  migrate.sh  migration_runner.py  utils.py
migrations/versions/: 001_initial_schema.py  002_add_rich_metadata.py  003_remove_duplicate_url.py  004_fix_num_downloads_column.py
scripts/: analyze_icon_accuracy.py  circle_round_evaluation_20250903_165332.json  circle_round_evaluation_20250904_114541.json  compare_evaluations.py  evaluate_circle_round_episodes.py  icon_accuracy_analysis_20250903_165332.json  icon_accuracy_analysis_20250904_114541.json  run_tests.sh  setup_environment.py
src/audio_icon_matcher/: __init__.py
src/icon_curator/: README.md  __init__.py
src/icon_extractor/: README.md
src/media_analyzer/: __init__.py  cli.py
src/media_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  __init__.py  conftest.py  pytest_spacy_mock.py  verified_integration_test.py
tests/fixtures/: icon_curator.py
tests/integration/: conftest.py
tests/utils/: audio.py  fixtures.py
(+214 files in other folders)
